# directors-cut

./: .gitignore  COOKIES_SETUP.md  FIXES_APPLIED.md  GRADIO_MCP_SETUP.md  Procfile  README.md  SMART_CROP_METHODOLOGY.md  TECHNICAL_OVERVIEW.md  YOUTUBE_PROXY_SETUP.md  app.py  app2.py  check_elevenlabs_v1.py  check_keys.py  check_runtime_deps.py  create_hf_space.py  debug_director.py  debug_hands.py  debug_intro.py  debug_scout.py  inspect_colorclip.py  inspect_elevenlabs.py  inspect_moviepy.py  inspect_moviepy_audio.py  inspect_moviepy_subclip.py  launch_app.py  proxy_requirements.txt  pyproject.toml  railway.json  requirements.txt  test_flux_image.py  test_frame_analysis.py  test_frame_description.py  test_gemini_api.py  test_gradio_config.py  test_nebius_api.py  test_new_methods.py  test_simple_crop.py  verify_workflow.py  walkthrough.md  youtube_proxy_service.py
.claude/: settings.local.json
directors-cut/: README.md  app.py  editing_server.py  gradio_mcp_stdio.py  gradio_server.py  requirements.txt
directors-cut/video_processing/: __init__.py  conversion.py  download.py  ffmpeg_utils.py  intro_generation.py  subtitle_generation.py  viral_detection.py
src/: director.py  hands.py  paths.py  scout.py  server.py  showrunner.py  utils.py  verifier.py
